[project]
name = "my-first-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=2.4.7",
    "apscheduler>=4.0.0a5",
    "google-genai>=1.61.0",
    "httpx>=0.28.1",
    "mcp>=1.26.0",
    "pydantic-settings>=2.12.0",
]
